# sp_ask_list_of_concurrent_chats

./: .gitignore  README.md  REAMDE.md  concurrent_chats.py  pyproject.toml  requirements.txt
sp_ask_list_of_concurrent_chats/: __init__.py
tests/: test_sp_ask_list_of_concurrent_chats.py
